feat: visualize real data in sector heatmap

--- a/app/ui/index.html
+++ b/app/ui/index.html
@@ -54,7 +54,7 @@
       <section class="panel market-heatmap-panel">
         <div class="panel-header">
           <h2>Heatmap</h2>
-          <span class="hint">Default sector snapshot</span>
+          <span class="hint">Latest sector scores</span>
         </div>
         <div class="market-heatmap" id="marketHeatmap"></div>
         <div class="heatmap-legend">
