feat: ui update

--- a/app/ui/index.html
+++ b/app/ui/index.html
@@ -49,15 +49,15 @@
               <p class="insight-body" id="insightSummary">뉴스를 선택하면 한국어 요약이 표시됩니다.</p>
             </div>
           <div class="insight-block">
-            <h3>분석 근거</h3>
+            <h3>Analysis Rationale</h3>
             <p class="insight-body" id="insightAnalysis">분석 결과가 아직 없습니다.</p>
           </div>
           <div class="insight-block">
-            <h3>FX Forecast 근거</h3>
+            <h3>FX Forecast Rationale</h3>
             <p class="insight-body" id="insightFx">FX 예측이 아직 없습니다.</p>
           </div>
           <div class="insight-block">
-            <h3>Heatmap 근거</h3>
+            <h3>Heatmap Rationale</h3>
             <p class="insight-body" id="insightHeatmap">Heatmap 예측이 아직 없습니다.</p>
           </div>
           </aside>
@@ -124,7 +124,7 @@
     </main>
 
     <footer>
-      <span>LLM: local Mistral - Storage: Postgres - Source: RapidAPI</span>
+      <span>LLM: openai gpt-4o-mini - Storage: Postgres - Source: BBC news</span>
     </footer>
 
     <script src="/static/app.js?v=2"></script>
